# MasjidApp

./: .gitignore
BackEnd/api/masjid_app_admin_manager_api/: Cargo.toml  Dockerfile  README.MD
BackEnd/api/masjid_app_admin_manager_api/src/: main.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/: announcements.rs  ask_imam.rs  events.rs  mod.rs  prayer_times.rs  user_authentication.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/ask_imam/: endpoints.rs  errors.rs  models.rs  repositories.rs  services.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/donation/: repositories.rs  services.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/donation/endpoints/: get_donation_history.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/donation/errors/: donation_history_admin_repository_errors.rs  donation_history_service_errors.rs  (+3 more)
BackEnd/api/masjid_app_admin_manager_api/src/features/events/: endpoints.rs  errors.rs  mod.rs  repositories.rs  repository.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/prayer_times/: endpoints.rs  errors.rs  models.rs  repositories.rs  repository.rs
BackEnd/api/masjid_app_admin_manager_api/src/features/user_authentication/: endpoints.rs  enpoints.rs  errors.rs  models.rs  repositories.rs  repository.rs
BackEnd/api/masjid_app_admin_manager_api/src/shared/: jwt.rs
BackEnd/api/masjid_app_admin_manager_api/tests/common/: dummy_data.rs  mod.rs  setup.rs
BackEnd/api/masjid_app_admin_manager_api/tests/repositories/: mysql.rs
BackEnd/api/masjid_app_api/: Cargo.toml
BackEnd/api/masjid_app_api/src/: init.rs  main.rs
BackEnd/api/masjid_app_api/src/features/: announcements.rs  mod.rs  prayer_times.rs  user_authentication.rs
BackEnd/api/masjid_app_api/src/features/announcements/: announcements.rs  mod.rs
BackEnd/api/masjid_app_api/src/features/prayer_times/: prayer_times.rs
BackEnd/api/masjid_app_api/src/features/user_authentication/: login.rs  mod.rs  registration.rs  reset_password.rs  user_repository.rs
BackEnd/api/masjid_app_api/src/shared/: app_state.rs  mod.rs  repository_manager.rs  user_management.rs
BackEnd/api/masjid_app_api/src/shared/data_access/: data_access.rs
BackEnd/api/masjid_app_api/tests/common/: dummy_data.rs  setup.rs
BackEnd/api/masjid_app_api/tests/repositories/: mysql.rs
BackEnd/api/masjid_app_api_integration_testing/: Cargo.toml  README.MD
BackEnd/api/masjid_app_api_integration_testing/tests/: lib.rs
BackEnd/api/masjid_app_api_integration_testing/tests/common/: mod.rs
BackEnd/api/masjid_app_api_integration_testing/tests/common/data_access_layer/: mod.rs  mysql.rs
BackEnd/api/masjid_app_api_integration_testing/tests/common/logging/: mod.rs
BackEnd/api/masjid_app_api_integration_testing/tests/common/mock_data/: mod.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/: mod.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/announcements/: mod.rs  my_sql.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/ask_imam/: mysql.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/donation/: donation_history_data.csv  mod.rs  mysql.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/events/: mysql.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/prayer_times/: mysql.rs
BackEnd/api/masjid_app_api_integration_testing/tests/features/user_authentication/: my_sql.rs  mysql.rs
BackEnd/api/masjid_app_api_library/: Cargo.toml
BackEnd/api/masjid_app_api_library/src/: lib.rs  repository_manager.rs
BackEnd/api/masjid_app_api_library/src/features/: announcements.rs  ask_imam.rs  events.rs  mod.rs  prayer_times.rs
BackEnd/api/masjid_app_api_library/src/features/announcements/: errors.rs  mod.rs  models.rs  repository.rs
BackEnd/api/masjid_app_api_library/src/features/ask_imam/: endpoints.rs  errors.rs  models.rs  repositories.rs  services.rs
BackEnd/api/masjid_app_api_library/src/features/donation/: models.rs
BackEnd/api/masjid_app_api_library/src/features/events/: endpoints.rs  errors.rs  mod.rs  models.rs  repository.rs
BackEnd/api/masjid_app_api_library/src/features/prayer_times/: endpoints.rs  errors.rs  mod.rs  models.rs  prayer_times.rs  repository.rs
BackEnd/api/masjid_app_api_library/src/shared/: age_range.rs  app_state.rs  contact_details.rs  mod.rs
BackEnd/api/masjid_app_api_library/src/shared/data_access/: db_retrieval_mode.rs  db_type.rs  mod.rs  repository_manager.rs
BackEnd/api/masjid_app_api_library/src/shared/extractors/: mod.rs
BackEnd/api/masjid_app_api_library/src/shared/logging/: log_source.rs  logging.rs  mod.rs
BackEnd/api/masjid_app_api_library/src/shared/middleware/: file_uploader.rs  mod.rs
BackEnd/api/masjid_app_api_library/src/shared/payment/: billing_address.rs  card_details.rs  errors.rs  mod.rs  service.rs
BackEnd/api/masjid_app_api_library/src/shared/traits/: mod.rs  value_retriever.rs
BackEnd/api/masjid_app_api_library/src/shared/types/: age_range.rs  app_state.rs  contact_details.rs  mod.rs  personal_title.rs  recurrence.rs
BackEnd/api/masjid_app_api_library/src/shared/util/: enums.rs
BackEnd/api/masjid_app_public_api/: Cargo.toml  Dockerfile  README.MD
BackEnd/api/masjid_app_public_api/src/: main.rs
BackEnd/api/masjid_app_public_api/src/features/: announcements.rs  events.rs  mod.rs  prayer_times.rs  user_authentication.rs
BackEnd/api/masjid_app_public_api/src/features/ask_imam/: endpoints.rs  errors.rs  models.rs  repositories.rs  services.rs
BackEnd/api/masjid_app_public_api/src/features/donation/: endpoints.rs  errors.rs  models.rs  repositories.rs  services.rs
BackEnd/api/masjid_app_public_api/src/features/events/: endpoints.rs  mod.rs  repositories.rs  repository.rs
BackEnd/api/masjid_app_public_api/src/features/prayer_times/: endpoints.rs  errors.rs  models.rs  repositories.rs  repository.rs
BackEnd/api/masjid_app_public_api/src/shared/: jwt.rs  mod.rs
BackEnd/api/masjid_app_public_api/tests/common/: dummy_data.rs  setup.rs
BackEnd/api/masjid_app_public_api/tests/repositories/: mysql.rs
(+129 files in other folders)
