[package]
name = "masjid_app_admin_manager_api"
version = "0.1.0"
edition = "2024"

[dependencies]
masjid_app_api_library = { path = "../masjid_app_api_library" }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }

bcrypt = "0.17.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.88"
mockall = "0.13.1"
jsonwebtoken = "9.3.1"
tracing = "0.1.41"
sha2 = "0.10.9"
tracing-subscriber = { version = "0.3.19", features = ["json"] }