[package]
name = "masjid_app_admin_manager_api"
version = "0.1.0"
edition = "2024"

[dependencies]
masjid_app_api_library = { path = "../masjid_app_api_library" }
axum = "0.8.8"
axum-extra = { version = "0.12.3", features = ["typed-header"] }

bcrypt = "0.17.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
mockall = "0.14.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
tracing = "0.1.44"
sha2 = "0.10.9"
tracing-subscriber = { version = "0.3.22", features = ["std", "fmt", "json", "env-filter"] }
