[package]
name = "masjid_app_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bcrypt = "0.17.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.86"
mockall = "0.13.1"