[package]
name = "masjid_app_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }

bcrypt = "0.17.0"
tokio = { version = "1.44.5", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.88"
mockall = "0.13.1"
log = "0.4.26"
jsonwebtoken = "9.3.1"
testcontainers = "0.24.0"

[[bin]]
name = "masjid_app_api"
path = "src/main.rs"
[lib]
name = "masjid_app_api"
path = "src/lib.rs"