[package]
name = "masjid_app_api_integration_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
masjid_app_api_library = { path = "../masjid_app_api_library" }
masjid_app_public_api = { path = "../masjid_app_public_api" }
masjid_app_admin_manager_api = { path = "../masjid_app_admin_manager_api" }
tracing-subscriber = { version = "0.3.22", features = ["std", "fmt", "json", "env-filter"] }
tracing = "0.1.44"
testcontainers = "0.26.2"
tokio = "1.48.0"
