[package]
name = "masjid_app_api_library"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }

mockall = "0.13.1"
axum = { version = "0.8.4", features = ["multipart"] }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.140"