[package]
name = "masjid_app_public_api"
version = "0.1.0"
edition = "2024"

[dependencies]
masjid_app_api_library = { path = "../masjid_app_api_library" }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }

bcrypt = "0.17.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.88"
mockall = "0.13.1"
log = "0.4.26"
jsonwebtoken = "9.3.1"
testcontainers = "0.24.0"
sha2 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "json", "env-filter"] }
[[bin]]
name = "masjid_app_public_api"
path = "src/main.rs"
[lib]
name = "masjid_app_public_api"
path = "src/lib.rs"
