[package]
name = "masjid_app_public_api"
version = "0.1.0"
edition = "2024"

[dependencies]
masjid_app_api_library = { path = "../masjid_app_api_library" }
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
mockall = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["std", "fmt", "json", "env-filter"] }
[[bin]]
name = "masjid_app_public_api"
path = "src/main.rs"
[lib]
name = "masjid_app_public_api"
path = "src/lib.rs"
